export const snapshot = {};

snapshot[`snapshot get and filter extracts heading and link from applitools snapshot 1`] = `
{
  count: 1,
  json: '[
  {
    "role": "heading",
    "text": "Login Form",
    "attributes": {
      "level": "4",
      "ref": "e6"
    },
    "children": [],
    "rawDescriptor": "heading \\\\"Login Form\\\\" [level=4] [ref=e6]"
  }
]',
  success: true,
}
`;

snapshot[`snapshot get and filter extracts heading and link from applitools snapshot 2`] = `
{
  count: 1,
  json: '[
  {
    "role": "link",
    "text": "Sign in",
    "attributes": {
      "ref": "e17",
      "cursor": "pointer"
    },
    "children": [],
    "rawDescriptor": "link \\\\"Sign in\\\\" [ref=e17] [cursor=pointer]"
  }
]',
  success: true,
}
`;

snapshot[`snapshot get and filter extracts Cloudbooking link from okta snapshot 1`] = `
{
  count: 1,
  json: '[
  {
    "role": "link",
    "text": "launch app Cloudbooking",
    "attributes": {},
    "children": [
      {
        "role": "article",
        "text": "",
        "attributes": {},
        "children": [
          {
            "role": "img",
            "text": "Cloudbooking logo",
            "attributes": {},
            "children": [],
            "rawDescriptor": "img \\\\"Cloudbooking logo\\\\""
          }
        ],
        "rawDescriptor": "article"
      }
    ],
    "rawDescriptor": "link \\\\"launch app Cloudbooking\\\\""
  }
]',
  success: true,
}
`;

snapshot[`snapshot get and filter extract bookings from specified date from cloudbooking snapshot 1`] = `
{
  count: 14,
  json: '[
  {
    "role": "row",
    "text": "00180877 Desk Complete 29 Jun 2025 22:01 Mate.Molnar@genesys.com Mate Molnar 03 Jul 2025 06:00 03 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106",
    "attributes": {},
    "children": [],
    "rawDescriptor": "row \\\\"00180877 Desk Complete 29 Jun 2025 22:01 Mate.Molnar@genesys.com Mate Molnar 03 Jul 2025 06:00 03 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106\\\\""
  },
  {
    "role": "row",
    "text": "00181874 Desk Complete 07 Jul 2025 05:11 Mate.Molnar@genesys.com Mate Molnar 07 Jul 2025 06:00 07 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106",
    "attributes": {},
    "children": [],
    "rawDescriptor": "row \\\\"00181874 Desk Complete 07 Jul 2025 05:11 Mate.Molnar@genesys.com Mate Molnar 07 Jul 2025 06:00 07 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106\\\\""
  },
  {
    "role": "row",
    "text": "00181875 Desk Complete 07 Jul 2025 05:12 Mate.Molnar@genesys.com Mate Molnar 09 Jul 2025 06:00 09 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106",
    "attributes": {},
    "children": [],
    "rawDescriptor": "row \\\\"00181875 Desk Complete 07 Jul 2025 05:12 Mate.Molnar@genesys.com Mate Molnar 09 Jul 2025 06:00 09 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106\\\\""
  },
  {
    "role": "row",
    "text": "00181876 Desk Complete 07 Jul 2025 05:12 Mate.Molnar@genesys.com Mate Molnar 10 Jul 2025 06:00 10 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106",
    "attributes": {},
    "children": [],
    "rawDescriptor": "row \\\\"00181876 Desk Complete 07 Jul 2025 05:12 Mate.Molnar@genesys.com Mate Molnar 10 Jul 2025 06:00 10 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106\\\\""
  },
  {
    "role": "row",
    "text": "00182832 Desk Complete 13 Jul 2025 18:52 Mate.Molnar@genesys.com Mate Molnar 14 Jul 2025 06:00 14 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106",
    "attributes": {},
    "children": [],
    "rawDescriptor": "row \\\\"00182832 Desk Complete 13 Jul 2025 18:52 Mate.Molnar@genesys.com Mate Molnar 14 Jul 2025 06:00 14 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106\\\\""
  },
  {
    "role": "row",
    "text": "00182833 Desk Complete 13 Jul 2025 18:52 Mate.Molnar@genesys.com Mate Molnar 16 Jul 2025 06:00 16 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106",
    "attributes": {},
    "children": [],
    "rawDescriptor": "row \\\\"00182833 Desk Complete 13 Jul 2025 18:52 Mate.Molnar@genesys.com Mate Molnar 16 Jul 2025 06:00 16 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106\\\\""
  },
  {
    "role": "row",
    "text": "00182834 Desk Complete 13 Jul 2025 18:53 Mate.Molnar@genesys.com Mate Molnar 17 Jul 2025 06:00 17 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106",
    "attributes": {},
    "children": [],
    "rawDescriptor": "row \\\\"00182834 Desk Complete 13 Jul 2025 18:53 Mate.Molnar@genesys.com Mate Molnar 17 Jul 2025 06:00 17 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106\\\\""
  },
  {
    "role": "row",
    "text": "00184101 Desk Complete 20 Jul 2025 20:57 Mate.Molnar@genesys.com Mate Molnar 21 Jul 2025 06:00 21 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106",
    "attributes": {},
    "children": [],
    "rawDescriptor": "row \\\\"00184101 Desk Complete 20 Jul 2025 20:57 Mate.Molnar@genesys.com Mate Molnar 21 Jul 2025 06:00 21 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106\\\\""
  },
  {
    "role": "row",
    "text": "00184102 Desk Complete 20 Jul 2025 20:57 Mate.Molnar@genesys.com Mate Molnar 23 Jul 2025 06:00 23 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106",
    "attributes": {},
    "children": [],
    "rawDescriptor": "row \\\\"00184102 Desk Complete 20 Jul 2025 20:57 Mate.Molnar@genesys.com Mate Molnar 23 Jul 2025 06:00 23 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106\\\\""
  },
  {
    "role": "row",
    "text": "00184103 Desk Complete 20 Jul 2025 20:57 Mate.Molnar@genesys.com Mate Molnar 24 Jul 2025 06:00 24 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106",
    "attributes": {},
    "children": [],
    "rawDescriptor": "row \\\\"00184103 Desk Complete 20 Jul 2025 20:57 Mate.Molnar@genesys.com Mate Molnar 24 Jul 2025 06:00 24 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106\\\\""
  },
  {
    "role": "row",
    "text": "00185261 Desk Complete 27 Jul 2025 13:15 Mate.Molnar@genesys.com Mate Molnar 28 Jul 2025 06:00 28 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106",
    "attributes": {},
    "children": [],
    "rawDescriptor": "row \\\\"00185261 Desk Complete 27 Jul 2025 13:15 Mate.Molnar@genesys.com Mate Molnar 28 Jul 2025 06:00 28 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106\\\\""
  },
  {
    "role": "row",
    "text": "00185668 Desk Complete 29 Jul 2025 08:51 Mate.Molnar@genesys.com Mate Molnar 29 Jul 2025 08:45 29 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106",
    "attributes": {},
    "children": [],
    "rawDescriptor": "row \\\\"00185668 Desk Complete 29 Jul 2025 08:51 Mate.Molnar@genesys.com Mate Molnar 29 Jul 2025 08:45 29 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106\\\\""
  },
  {
    "role": "row",
    "text": "00185263 Desk Complete 27 Jul 2025 13:16 Mate.Molnar@genesys.com Mate Molnar 30 Jul 2025 06:00 30 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106",
    "attributes": {},
    "children": [],
    "rawDescriptor": "row \\\\"00185263 Desk Complete 27 Jul 2025 13:16 Mate.Molnar@genesys.com Mate Molnar 30 Jul 2025 06:00 30 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106\\\\""
  },
  {
    "role": "row",
    "text": "00185262 Desk Complete 27 Jul 2025 13:16 Mate.Molnar@genesys.com Mate Molnar 31 Jul 2025 06:00 31 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106",
    "attributes": {},
    "children": [],
    "rawDescriptor": "row \\\\"00185262 Desk Complete 27 Jul 2025 13:16 Mate.Molnar@genesys.com Mate Molnar 31 Jul 2025 06:00 31 Jul 2025 21:00 Budapest - Eiffel Square 5th floor - Desk 5-0106\\\\""
  }
]',
  success: true,
}
`;
